[package]
name = "rmf_crowdsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.1"
rand = "0.8.5"
statrs = "0.15.0"
mapf = { path = '/home/arjo/workspaces/rust/mapf/mapf' }
line_intersection = "0.4.0"
image = "0.24.3"
imageproc = "0.23.0"
yaml-rust = "0.4"
line_drawing = "1.0.0"
